# stjlib

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: publish.yml  python-package.yml  release.yml
docs/: conf.py  requirements.txt
docs/source/: advanced.rst  api.rst  conf.py  index.rst  installation.rst  modules.rst  usage.rst
src/stj/: __init__.py  stj.py
src/stjlib/: __init__.py  stj.py
src/stjlib/core/: __init__.py  data_classes.py  enums.py
src/stjlib/validation/: __init__.py  validators.py
tests/: conftest.py  test_data_classes.py  test_stj.py  test_validators.py
