[metadata]
name = stjlib
version = 0.1.0
author = Yaniv Golan
author_email = yaniv@golan.name
description = A Python wrapper for the Standard Transcription JSON (STJ) format.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaniv-golan/stjlib
project_urls =
    Bug Tracker = https://github.com/yaniv-golan/stjlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    iso-639>=0.4.5

[options.packages.find]
where = src
